@@ -1,14 +1,12 @@
 package com.envyful.api.forge.config;
 
 import com.envyful.api.config.type.ConfigItem;
-import com.envyful.api.forge.chat.UtilChatColour;
+import com.envyful.api.platform.PlatformProxy;
 import com.envyful.api.text.Placeholder;
-import com.envyful.api.text.PlaceholderFactory;
 import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.util.Util;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
-import java.util.Collections;
+import java.util.List;
 
 @ConfigSerializable
 public class ItemConfigCost implements ConfigCost {
@@ -31,10 +29,7 @@ public class ItemConfigCost implements ConfigCost {
     @Override
     public void take(ServerPlayerEntity player, Placeholder... placeholders) {
         player.inventory.removeItem(UtilConfigItem.fromConfigItem(this.configItem));
-
-        for (String handlePlaceholder : PlaceholderFactory.handlePlaceholders(Collections.singletonList(this.successMessage), placeholders)) {
-            player.sendMessage(UtilChatColour.colour(handlePlaceholder), Util.NIL_UUID);
-        }
+        PlatformProxy.sendMessage(player, List.of(this.successMessage), placeholders);
     }
 
     @Override
